--- a/6824_project/bib.tex
+++ b/6824_project/bib.tex
@@ -4,11 +4,49 @@ Silas Boyd-Wickizer, Austin T. Clements, Yandong Mao, Aleksey Pesterev,
 M. Frans Kaashoek, Robert Morris, and Nickolai Zeldovich
 ``An Analysis of Linux Scalability to Many Cores''
 {\em In Proceedings of the 9th Symposium on Operating Systems Design and Implementation (OSDI 2010)}, Vancouver, Canada, October 2010.
+
+\bibitem{rel:vm55}
+``VMware Workstation 5.5 release note''
+{\em Nov 06, 2008, http://www.vmware.com/support/ws55/doc/ws\_devices\_2way\_vsmp.html} 
+
+\bibitem{rel:amd6core}
+``AMD Opteron 6168 configuration''
+{\em http://www.newegg.com/Product/Product.aspx?Item=N82E16819105267}
+
+\bibitem{rel:splash2}
+Steven Cameron Woo, Moriyoshi Ohara, Evan Torrie,Jaswinder Pal Singh,
+and Anoop Gupt
+``The SPLASH-2 Programs: Characterization and Methodological Considerations''
+{\em In the Proceedings of the 22nd Annual International Symposium on Computer Architecture, June 1995}
+
+\bibitem{rel:coremu}
+Zhaoguo Wang, Ran Liu, Yufei Chen, Xi Wu, Haibo Chen, Weihua Zhang, Binyu Zang
+``COREMU: a scalable and portable parallel full-system emulator.''
+{\em PPOPP 2011: 213-222}
+
+\bibitem{rel:qemuwiki}
+``QEMU''
+{\em Wikipedia, http://en.wikipedia.org/wiki/QEMU}
+
+\bibitem{rel:steven}
+Steven Cameron Woo, Moriyoshi Ohara, Evan Torrie, Jaswinder Pal Singh, and Anoop Gupta. 
+``The SPLASH-2 programs: characterization and methodological considerations''
+{\em SIGARCH Comput. Archit. News 23, 2 (May 1995), 24-36. DOI=10.1145/225830.223990 http://doi.acm.org/10.1145/225830.223990} 
+
+\bibitem{rel:redisweb}
+``REDIS'' {\em http://redis.io/}
+
 \bibitem{rel:hiushan}
 HiuShan Yim
 {\em Evaluating the Performance Characteristics of a Virtual Machine Used on Simultaneous Multi-Threaded (SMT) Processors}
 Master Thesis, Graduate School-New Brunswick Rutgers, 
 The State University of New Jersey, 2000.
+
+\bibitem{rel:xenpar}
+Stephen Shankland
+``Xen getting multiprocessor support''
+{\em CNET News, http://news.cnet.com/Xen-getting-multiprocessor-support/2100-7344\_3-5741373.html}
+
 \bibitem{rel:oceanscale}
 Heinrich, Mark and Chaudhuri, Mainak
 ``Ocean warning: avoid drowning''
@@ -17,5 +55,11 @@ Heinrich, Mark and Chaudhuri, Mainak
 Michael Dipperstein
 ``SPLASH-2 Ocean Performance Analysis''
 {\em http://michael.dipperstein.com/ocean/speedup.ps}
+
+\bibitem{rel:xen}
+Paul Barham, Boris Dragovic, Keir Fraser, Steven Hand, Tim Harris, Alex Ho, Rolf Neugebauer, Ian Pratt, and Andrew Warfield. 2003.
+``Xen and the art of virtualization.''
+{\em In Proceedings of the nineteenth ACM symposium on Operating systems principles (SOSP '03). ACM, New York, NY, USA, 164-177. DOI=10.1145/945445.945462 http://doi.acm.org/10.1145/945445.945462}
+
 \end{thebibliography}
 
