--- a/6824_project/hypo.tex
+++ b/6824_project/hypo.tex
@@ -1,4 +1,4 @@
-\section{Hypothesis}
+\subsection{Hypothesis}
 To reason about the scalability problems which are only present in the
 virtualized environment, we investigated the design and implementation
 of the QEMU virtual machine, and the COREMU system, and proposed some
